--- a/GuerrillaAPI/appsettings.json
+++ b/GuerrillaAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "GuerrillaDB": "Data Source=163.178.107.10;Initial Catalog=GuerillaAppJLD;User ID=Laboratorios;Password=Saucr.118"
+    "GuerrillaDB": "Data Source=163.178.107.10;Initial Catalog=GuerrillaAPP;User ID=Laboratorios;Password=Saucr.118"
   },
   "AllowedHosts": "*"
 }
